design postpage base

--- a/resources/postpage.html
+++ b/resources/postpage.html
@@ -1,2 +1,12 @@
 <!DOCTYPE html>
-
+	<html>
+		<head>
+			<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+			<title>adattarsi<title>
+		</head>
+		<body>
+			<h1>
+				<a href="./mainpage.html" title="adattarsi" target="_self">adattarsi</a>
+			</h1>
+		</body>
+	</html>
