--- a/resources/postpage.html
+++ b/resources/postpage.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-			<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
-			<title>adattarsi<title>
-		</head>
-		<body>
-			<h1>
-				<a href="./mainpage.html" title="adattarsi" target="_self">adattarsi</a>
-			</h1>
-		</body>
-	</html>
+<html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+		<title>adattarsi</title>
+	</head>
+	<body>
+		<h1>
+			<a href="./mainpage.html" title="adattarsi" target="_self">adattarsi</a>
+		</h1>
+		<a href="./mainpage.html" title="로그아웃" target="_self">로그아웃</a>
+		<img src="./image/11811343_868032563276193_2938643858743708391_n.jpg" alt="햄버거" width="200" height="200" />
+		<form action="url" method="GET">
+			comment
+			<textarea rows="1" cols="100"></textarea>
+			<br />
+			<input type="submit" />
+		</form>
+	</body>
+</html>
