--- a/resources/postpage.html
+++ b/resources/postpage.html
@@ -6,11 +6,11 @@
 	</head>
 	<body>
 		<h1>
-			<a href="./mainpage.html" title="adattarsi" target="_self">adattarsi</a>
+			<a href="./index.html" title="adattarsi" target="_self">adattarsi</a>
 		</h1>
-		<a href="./mainpage.html" title="로그아웃" target="_self">로그아웃</a>
+		<a href="./index.html" title="로그아웃" target="_self">로그아웃</a>
 		<br/>
-		<img src="./image/11811343_868032563276193_2938643858743708391_n.jpg" alt="햄버거" width="200" height="200" />
+		<img src="./images/11811343_868032563276193_2938643858743708391_n.jpg" alt="햄버거" width="200" height="200" />
 		<div>
 			<ol>
 				<form action="url" method="GET">
