--- a/resources/index.html
+++ b/resources/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 
 <html>
@@ -14,7 +15,7 @@
 
 <div id="total"><!-- 헤더 래퍼 -->
     <div id="header" style="border-bottom: solid 4px #8e3321;">
-        <a href="index.html"><img src="./images/ada.png" style="border: 1px solid blue;" width="400" height="80"></a>
+        <a href="index.html"><img src="./images/logo.png" width="380" height="110"></a>
         <a href="upload.html"><img src="./images/login.png" style="position:absolute; right:30px; border: 1px solid blue; " width="160" height="80"></a>
         <a href="mypage.html"><img src="./images/post.png" style="position:absolute; right:200px; border: 1px solid blue;" width="160" height="80"></a>
         <a href="mypage.html"><img src="./images/mypage.png" style="position:absolute; right:370px; border: 1px solid blue;" width="160" height="80"></a>
