--- a/resources/index.html
+++ b/resources/index.html
@@ -14,11 +14,11 @@
 <body>
 
 <div id="total"><!-- 헤더 래퍼 -->
-    <div id="header">
+    <div id="header"style="border-bottom: solid 2px #000000;">
         <a href="index.html"><img src="./images/logo.png" width="380" height="120"></a>
-        <a href="#"><img src="./images/login.png" style="position:absolute; top: 65px; right:30px;  " width="80" height="40"></a>
-        <a href="#"><img src="./images/post.png" style="position:absolute;  top: 65px; right:120px;" width="80" height="40"></a>
-        <a href="#"><img src="./images/my_page.png" style="position:absolute;  top: 65px; right:210px;" width="80" height="40"></a>
+        <a href="#"><img src="./images/login.png" style="position:absolute; top: 90px; right:30px;  " width="80" height="40"></a>
+        <a href="#"><img src="./images/post.png" style="position:absolute;  top: 90px; right:120px;" width="80" height="40"></a>
+        <a href="#"><img src="./images/my_page.png" style="position:absolute;  top: 90px; right:210px;" width="80" height="40"></a>
         <form id="searchbox" action="">
             <input id="search" type="text" placeholder="Search...">
                 <input id="submit" type="submit" value="Search">
