--- a/resources/index.html
+++ b/resources/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <div id="total"><!-- 헤더 래퍼 -->
-    <div id="header"style="border-bottom: solid 2px #000000;">
+    <div id="header"style="border-bottom: solid 1px #000000;">
         <a href="index.html"><img src="./images/logo.png" width="380" height="120"></a>
         <a href="#"><img src="./images/login.png" style="position:absolute; top: 90px; right:30px;  " width="80" height="40"></a>
         <a href="#"><img src="./images/post.png" style="position:absolute;  top: 90px; right:120px;" width="80" height="40"></a>
@@ -28,15 +28,15 @@
 
 
 
-    <div id="body_type" style="border-bottom: solid 3px #000000;">
-        <input type="image" src="./images/body_type.png" style="border: 1px solid blue;" width="110" height=130">
-        <input type="image"  src="./images/body_type.png" style="border: 1px solid blue;" width="110" height=130">
-        <input type="image"  src="./images/body_type.png" style="border: 1px solid blue;" width="110" height=130">
-        <input type="image"  src="./images/body_type.png" style="border: 1px solid blue;" width="110" height=130">
-        <input type="image"  src="./images/body_type.png" style="border: 1px solid blue;" width="110" height=130">
-        <input type="image"  src="./images/body_type.png" style="border: 1px solid blue;" width="110" height=130">
-        <input type="image"  src="./images/body_type.png" style="border: 1px solid blue;" width="110" height=130">
-        <input type="image"  src="./images/body_type.png" style="border: 1px solid blue;" width="110" height=130">
+    <div id="body_type" style="border-bottom: solid 1px #000000;">
+        <input type="image" src="./images/iu.jpg" width="110" height=130">
+        <input type="image"  src="./images/iu.jpg"  width="110" height=130">
+        <input type="image"  src="./images/iu.jpg"  width="110" height=130">
+        <input type="image"  src="./images/iu.jpg"  width="110" height=130">
+        <input type="image"  src="./images/iu.jpg"  width="110" height=130">
+        <input type="image"  src="./images/iu.jpg"  width="110" height=130">
+        <input type="image"  src="./images/iu.jpg"  width="110" height=130">
+        <input type="image"  src="./images/iu.jpg"  width="110" height=130">
 
         <input type="submit" id="time_order" value="날짜순">/<input type="submit" id="like_order" value="인기순">
         
