--- a/resources/index.html
+++ b/resources/index.html
@@ -29,6 +29,8 @@
 
 
     <div id="body_type" style="border-bottom: solid 1px #000000;">
+        <div class="tilt pic">
+            <img src="http://lorempixel.com/300/300/transport/5" alt="car">
         <input type="image" src="./images/iu.jpg" width="110" height=130">
         <input type="image"  src="./images/iu.jpg"  width="110" height=130">
         <input type="image"  src="./images/iu.jpg"  width="110" height=130">
@@ -37,6 +39,7 @@
         <input type="image"  src="./images/iu.jpg"  width="110" height=130">
         <input type="image"  src="./images/iu.jpg"  width="110" height=130">
         <input type="image"  src="./images/iu.jpg"  width="110" height=130">
+          </div>
 
         <input type="submit" id="time_order" value="날짜순">/<input type="submit" id="like_order" value="인기순">
         
