--- a/resources/index.html
+++ b/resources/index.html
@@ -29,18 +29,15 @@
 
 
     <div id="body_type" style="border-bottom: solid 1px #000000;">
-        <div class="tilt pic">
-            <img src="http://lorempixel.com/300/300/transport/5" alt="car">
-        <input type="image" src="./images/iu.jpg" width="110" height=130">
-        <input type="image"  src="./images/iu.jpg"  width="110" height=130">
-        <input type="image"  src="./images/iu.jpg"  width="110" height=130">
-        <input type="image"  src="./images/iu.jpg"  width="110" height=130">
-        <input type="image"  src="./images/iu.jpg"  width="110" height=130">
-        <input type="image"  src="./images/iu.jpg"  width="110" height=130">
-        <input type="image"  src="./images/iu.jpg"  width="110" height=130">
-        <input type="image"  src="./images/iu.jpg"  width="110" height=130">
-          </div>
-
+        <input type="image" class="tilt pic" src="./images/iu.jpg"  width="110" height=130" "alt="car">
+        <input type="image" class="tilt pic" src="./images/iu.jpg"  width="110" height=130" alt="car">
+        <input type="image" class="tilt pic" src="./images/iu.jpg"  width="110" height=130" alt="car">
+        <input type="image" class="tilt pic" src="./images/iu.jpg"  width="110" height=130" alt="car">
+        <input type="image" class="tilt pic" src="./images/iu.jpg"  width="110" height=130" alt="car">
+        <input type="image" class="tilt pic" src="./images/iu.jpg"  width="110" height=130" alt="car">
+        <input type="image" class="tilt pic" src="./images/iu.jpg"  width="110" height=130" alt="car">
+        <input type="image" class="tilt pic" src="./images/iu.jpg"  width="110" height=130" alt="car">
+          
         <input type="submit" id="time_order" value="날짜순">/<input type="submit" id="like_order" value="인기순">
         
     </div>
