--- a/resources/postpage.html
+++ b/resources/postpage.html
@@ -1,3 +1,39 @@
+
+<!DOCTYPE HTML>
+
+<html>
+    <head>
+        <title>adattarsi</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+        <link rel="stylesheet" href="assets/css/main2.css" />
+        <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    </head>
+
+	<body>
+
+		<div id="total"><!-- 헤더 래퍼 -->
+		    <div id="header"style="border-bottom: solid 1px #DADADA;">
+		        <a href="index.html"><img src="./images/logo.png" width="380" height="120"></a>
+		        <a href="#"><img src="./images/logout.png" class="morph pic" style="position:absolute; top: 90px; right:30px;  " width="80" height="40"></a>
+		        <a href="#"><img src="./images/my_page.png" class="morph pic" style="position:absolute;  top: 90px; right:120px;" width="80" height="40"></a>
+		        <form id="searchbox" action="">
+		            <input id="search" type="text" placeholder="Search...">
+		                <input id="submit" type="submit" value="Search">
+		        </form>
+		    </div>
+		</div>
+
+		<div id="post">
+			<div id="image"style="border-bottom: solid 1px #DADADA;">
+				<a href="#"><img src="./images/iu.jpg" align="center" width="130" height="100"></a>
+			</div>
+		</div>
+	</body>
+</html>
+
+<!--
 <!DOCTYPE html>
 <html>
 	<head>
@@ -47,4 +83,4 @@
 			</form>
 		</div>
 	</body>
-</html>
+</html> -->
