--- a/resources/postpage.html
+++ b/resources/postpage.html
@@ -32,13 +32,13 @@
 		    </div>
 		</div>
 
-		<div class="media" style="padding-top:5px; padding-right:10px; padding-bottom:5px; padding-left:10px;">
+		<div class="media" style="padding-top:50px; padding-right:10px; padding-bottom:5px; padding-left:70px;">
   			<div class="media-left media-middle">
     			<a href="#">
       				<img class="media-object" src="./images/iu.jpg" alt="iu">
     			</a>
   			</div>
-  			<div class="media-body" style="overflow:scroll; width:300px; height:150px; padding:10px; background-color:white;">
+  			<div class="media-body" style="overflow:scroll; width:300px; height:150px; padding:10px; vertical-align:middle;">
 				<ol>
 					<div>
 						<li>댓글1</li>
