add like and edit button

--- a/resources/postpage.html
+++ b/resources/postpage.html
@@ -34,25 +34,31 @@
 
 		<div class="media" style="padding-top:50px; padding-right:10px; padding-bottom:5px; padding-left:70px;">
   			<div class="media-left media-middle">
-    			<a href="#">
-      				<img class="media-object" src="./images/iu.jpg" alt="iu">
-    			</a>
-  			</div>
+				<div>
+					<a href="#">
+						<img class="media-object" src="./images/iu.jpg" alt="iu">
+					</a>
+					<div style="padding:10px; text-align:right;">	
+						<button type="submit" name="edit">edit</button>
+						<button type="reset" name="like">like</button>
+					</div>
+				</div>
+			</div>
   			<div class="media-body" style="overflow:scroll; width:300px; height:150px; padding:10px; vertical-align:middle;">
-				<ol>
+				<ul>
 					<div>
-						<li>댓글1</li>
+						<li>정말 예뻐요!!</li>
 					</div>
 					<br/>
 					<div>
-						<li>댓글2</li>
+						<li>솔직히 미쳤다</li>
 					</div>
 					<br/>
 					<div>
-						<li>댓글3</li>
+						<li>01030624019 전화주세요</li>
 					</div>
 					<br/>
-				</ol>
+				</ul>
 
 				가나다라마바사아자차카타파하가나다라마바사아자차카타파하가나다라마바사아자차카타파하<br />
 				<br />
@@ -63,7 +69,6 @@
 				<input type="submit" />
 				</form>
 			</div>
-			
 		</div>
 	</body>
 </html>
