adjusting bootstrap to postpage

--- a/resources/postpage.html
+++ b/resources/postpage.html
@@ -62,12 +62,12 @@
 
 				가나다라마바사아자차카타파하가나다라마바사아자차카타파하가나다라마바사아자차카타파하<br />
 				<br />
-				<form action="url" method="GET">
-					comment
-					<textarea rows="1" cols="50"></textarea>
-				<br />
-				<input type="submit" />
-				</form>
+				<form class="navbar-form navbar-left" role="comment" action="url" method="GET">
+					<div class="form-group">
+						<input type="text" size="45"  class="form-control" placeholder="comment">
+					</div>
+					<button type="submit" class="btn btn-default">Submit</button>
+				 </form>
 			</div>
 		</div>
 	</body>
