--- a/resources/index.html
+++ b/resources/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE HTML>
 
 <html>
+    
     <head>
         <title>adattarsi</title>
         <meta charset="utf-8" />
@@ -20,7 +21,7 @@
             <input id="search" type="text" placeholder="Search...">
                 <input id="submit" type="submit" value="Search">
         </form>
-     <a href="#"><img src="./images/register.png" class="morph pic" style="position:absolute;  top: 90px; right:120px;" width="80" height="40"></a>
+     <a href="#"><img src="./images/register.png" class="morph pic"  width="80" height="40"></a>
      <a href="#"><img src="./images/login.png" class="morph pic" style="position:absolute;  top: 90px; right:30px;" width="80" height="40"></a>
 
     </div>
