--- a/resources/postpage.html
+++ b/resources/postpage.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<style type="text/css">
+		</style>
 	</head>
 	<body>
 		<div class="container">
@@ -21,10 +23,14 @@
 						<div class="modal-body">
 							<div class="container-fluid">
 								<div class="row">
+									<!-- 게시글 이미지 -->
 									<div class="col-md-7" style="padding-left:0px; max-height:700px; overflow:hidden;">
 										<img src="./images/db_img1.png" style="height:auto; width:100%;">
 									</div>
+									<!-- 게시글 이미지 끝 -->
+
 									<div class="col-md-5" style="padding-left:0px; max-height:700px; overflow:auto;">
+										<!-- 게시글 내용 -->
 										<div style="padding-bottom:10px; padding-top:10px">
 											<img src="./images/hamburger.jpg" width="30px" height="30px">
 											작성자아이디
@@ -32,6 +38,9 @@
 										<div class="well well-lg" style="padding-bottom:10px; max-height:250px; overflow-y:auto;">
 											<p>ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ<p>
 										</div>
+										<!--게시글 내용 끝 -->
+
+										<!-- 좋아요 및 수정 버튼 -->
 										<div class="btn-group" role="group" style="padding-bottom:10px;">
 											<button class="btn btn-default" type="submit" name="edit">
 												<span class="badge"><span class="glyphicon glyphicon-pencil"></span></span> edit
@@ -40,8 +49,79 @@
 												<span class="badge"><span class="glyphicon glyphicon-thumbs-up"></span></span> 1241
 											</button>
 										</div>
-										<div>
-											<p>댓글창</p>
+										<!-- 좋아요 및 수정 버튼 끝 -->
+
+										<!-- 댓글 -->
+										<div style="width:100%; min-height: 200px;  max-height:400px; overflow:scroll; border-top:0.5px solid grey; border-bottom:0.5px solid grey; padding-top:5px; margin-top:5px; margin-bottom:5px;">
+											<div>
+												<img src="./images/hamburger.jpg" width="30px" height="30px">
+												<p style="display:inline; font-weight:bold;">작성자 이름
+												<p style="display:inline;">이쁨욬ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</p>
+												<time>15.08.23</time>
+											</div>
+											<div>
+												<img src="./images/hamburger.jpg" width="30px" height="30px">
+												<p style="display:inline; font-weight:bold;">작성자 이름
+												<p style="display:inline;">이쁨욬ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</p>
+												<time>15.08.23</time>
+											</div>
+											<div>
+												<img src="./images/hamburger.jpg" width="30px" height="30px">
+												<p style="display:inline; font-weight:bold;">작성자 이름
+												<p style="display:inline;">이쁨욬ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</p>
+												<time>15.08.23</time>
+											</div>
+											<div>
+												<img src="./images/hamburger.jpg" width="30px" height="30px">
+												<p style="display:inline; font-weight:bold;">작성자 이름
+												<p style="display:inline;">이쁨욬ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</p>
+												<time>15.08.23</time>
+											</div>
+											<div>
+												<img src="./images/hamburger.jpg" width="30px" height="30px">
+												<p style="display:inline; font-weight:bold;">작성자 이름
+												<p style="display:inline;">이쁨욬ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</p>
+												<time>15.08.23</time>
+											</div>
+											<div>
+												<img src="./images/hamburger.jpg" width="30px" height="30px">
+												<p style="display:inline; font-weight:bold;">작성자 이름
+												<p style="display:inline;">이쁨욬ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</p>
+												<time>15.08.23</time>
+											</div>	
+											<div>
+												<img src="./images/hamburger.jpg" width="30px" height="30px">
+												<p style="display:inline; font-weight:bold;">작성자 이름
+												<p style="display:inline;">이쁨욬ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</p>
+												<time>15.08.23</time>
+											</div>
+											<div>
+												<img src="./images/hamburger.jpg" width="30px" height="30px">
+												<p style="display:inline; font-weight:bold;">작성자 이름
+												<p style="display:inline;">이쁨욬ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</p>
+												<time>15.08.23</time>
+											</div>
+											<div>
+												<img src="./images/hamburger.jpg" width="30px" height="30px">
+												<p style="display:inline; font-weight:bold;">작성자 이름
+												<p style="display:inline;">이쁨욬ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</p>
+												<time>15.08.23</time>
+											</div>
+											<div>
+												<img src="./images/hamburger.jpg" width="30px" height="30px">
+												<p style="display:inline; font-weight:bold;">작성자 이름
+												<p style="display:inline;">이쁨욬ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</p>
+												<time>15.08.23</time>
+											</div>	
+										</div>
+										<!-- 댓글창 끝 -->
+
+										<!-- 댓글 입력창 -->
+										<div class="input-group" style="width:100%;">
+											<input style="width:88%;"type="text" class="form-control" placeholder="Comment">
+											<button style="width:12%;" class="btn btn-default" type="submit" name="comment">
+												<span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
+											</button>
 										</div>
 									</div>
 								</div>
