apply main theme to register.html

--- a/resources/register.html
+++ b/resources/register.html
@@ -49,19 +49,21 @@
 				<div id="signup">
 					<h1>Sign Up for Free</h1>
 					<form action="/register/post" method="post">
-						<div class="input-group">
+						<div class="input-group" style="padding:5px;">
 							<input type="text" class="form-control" placeholder="ID">
 						</div>
-						<div class="input-group">
+						<div class="input-group"style="padding:5px;">
 							<input type="text" class="form-control" placeholder="Password">
 						</div>
-						<div class="input-group" >
+						<div class="input-group" style="padding:5px;">
 							<input type="text" class="form-control" placeholder="Age">
 						</div>
-						<div class="input-group" >
+						<div class="input-group" style="padding:5px;">
 							<input type="text" class="form-control" placeholder="E-Mail Address">
 						</div>
-						<button class="btn btn-default" type="submit" name="signin">Get Started</button>
+						<div style="padding:5px;">
+							<button class="btn btn-default" type="submit" name="signin">Get Started</button>
+						</div>
 					</form>
 				</div>
 			</div><!-- tab-content -->
