apply theme to uploadingpage

--- a/resources/register.html
+++ b/resources/register.html
@@ -50,16 +50,16 @@
 					<h1>Sign Up for Free</h1>
 					<form action="/register/post" method="post">
 						<div class="input-group" style="padding:5px;">
-							<input type="text" class="form-control" placeholder="ID">
+							<input name="ID" type="text" class="form-control" placeholder="ID">
 						</div>
 						<div class="input-group"style="padding:5px;">
-							<input type="text" class="form-control" placeholder="Password">
+							<input name="Password" type="text" class="form-control" placeholder="Password">
 						</div>
 						<div class="input-group" style="padding:5px;">
-							<input type="text" class="form-control" placeholder="Age">
+							<input name="Age" type="text" class="form-control" placeholder="Age">
 						</div>
 						<div class="input-group" style="padding:5px;">
-							<input type="text" class="form-control" placeholder="E-Mail Address">
+							<input name="E-Mail" type="text" class="form-control" placeholder="E-Mail Address">
 						</div>
 						<div style="padding:5px;">
 							<button class="btn btn-default" type="submit" name="signin">Get Started</button>
