--- a/resources/uploadpage.html
+++ b/resources/uploadpage.html
@@ -1,56 +1,93 @@
+<!DOCTYPE HTML>
+
 <html>
-    <head>
-        <title>adattarsi</title>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-        <link rel="stylesheet" href="assets/css/main2.css" />
-        <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-    </head>
-<body>
+	<head>
+		<title>adattarsi</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main2.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!-- Bootstrap core CSS -->
+		<link href="assets/css/core.css" rel="stylesheet">
+		<!-- Custom styles for this template -->
+		<link href="assets/css/jumbotron.css" rel="stylesheet">
+		<!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+		<!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+		<script src="assets/js/ie-emulation-modes-warning.js"></script>
 
-<div id="header"style="border-bottom: solid 1px #DADADA;">
-    <a href="index.html"><img src="./images/logo.png" width="380" height="120"></a>
-    </div>
-<a href="#"><img src="./images/register.png" class="morph pic" style="position:absolute;  top: 80px; right:120px;" width="80" height="40"></a>
-<a href="#"><img src="./images/login.png" class="morph pic" style="position:absolute;  top: 80px; right:30px;" width="80" height="40"></a>
-<br>
+	</head>
 
-<script type="text/javascript">
-	function previewFile(){
-		var preview = document.querySelector('.img_file'); //selects the query named img
-		var file    = document.querySelector('input[type=file]').files[0]; //sames as here
-		var reader  = new FileReader();
+	<body>
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">Adattarsi</a>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse">
+				<form class="navbar-form navbar-right">
+					<div class="form-group">
+						<input type="text" placeholder="Id" class="form-control">
+					</div>
+					<div class="form-group">
+						<input type="password" placeholder="Password" class="form-control">
+					</div>
+					<button type="submit" class="btn btn-success">Sign in</button>
+				</form>
+			</div><!--/.navbar-collapse -->
+		</div>
+		</nav>
+		
+		<script type="text/javascript">
+			function previewFile(){
+				var preview = document.querySelector('.img_file'); //selects the query named img
+				var file    = document.querySelector('input[type=file]').files[0]; //sames as here
+				var reader  = new FileReader();
 
-		reader.onloadend = function(){
-			preview.src = reader.result;
-		}
-		if(file){
-			reader.readAsDataURL(file); //reads the data as a URL
-		}
-		else{
-			preview.src = "";
-		}
-	}
-	previewFile();  //calls the function named previewFile()
-</script>
-<div style="text-align:center;">
-<input type="file" onchange="previewFile()" ><br>
-<!-- If possible, change button in the preview image box -->
-<input type="image" src="" class="img_file" width="300" height="400" alt="No Image!!">
-<textarea name="textfield" cols="50" rows="30" style="width: 300px; height: 400px;" placeholder="내용을 입력해라 닝겐들아"></textarea>
+				reader.onloadend = function(){
+					preview.src = reader.result;
+				}
+				if(file){
+					reader.readAsDataURL(file); //reads the data as a URL
+				}
+				else{
+					preview.src = "";
+				}
+			}
+			previewFile();  //calls the function named previewFile()
+			</script>
+			<div style="margin:auto; width:795px; height:400px; padding:20px;">
+				<div style="float:left; padding-right:10px;">
+					<!-- If possible, change button in the preview image box -->
+					<input type="image" src="" class="img_file" width="300" height="400" alt="No Image!!">	
+					<input type="file" style="width 300px;" onchange="previewFile()" ><br>
+				</div>
 
-<br>
-Select Categories!!
-<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-<input type="submit" value="작성완료">
-</div>
-</body>
+				<div style="float:left; padding-left:10px;" >
+					<textarea class="form-control"name="textfield" style="width:435px; height:200px;" placeholder="Contents"></textarea>
+					<div>
+						<h3>Categories</h3>
+						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+					</div>
+				</div>
+			</div>
+			<br style="clear:both;">
+			<div style="margin:auto; clear:both; width:74px; height:34px;">
+				<input class="btn btn-default" type="submit" value="작성완료">
+			</div>
+		</div>
+	</body>
 </html>
