--- a/resources/register.html
+++ b/resources/register.html
@@ -53,7 +53,7 @@
 							<input name="ID" type="text" class="form-control" placeholder="ID">
 						</div>
 						<div class="input-group"style="padding:5px;">
-							<input name="Password" type="text" class="form-control" placeholder="Password">
+							<input name="Password" type="password" class="form-control" placeholder="Password">
 						</div>
 						<div class="input-group" style="padding:5px;">
 							<input name="Age" type="text" class="form-control" placeholder="Age">
