modify ratio of body type button padding

--- a/resources/homepage.html
+++ b/resources/homepage.html
@@ -63,8 +63,8 @@
         <p>dfsafndksl;avndlkn;snvklds;nv;lksdnl;vandsvlkdnsval;s</p>
       </div>
 
-    <div class="row">
-      <div class="col-md-4">
+    <div class="row" style="padding-left:60px; padding-right:60px; padding-top:30px;">
+      <div class="col-md-4" style="padding:0px;">
         <div class="col-md-4" style="display: inline-block;text-align: center;">
           <a class="btn btn-primary btn-lg" href="#" role="button">Type 1</a>
         </div>
@@ -75,7 +75,7 @@
           <a class="btn btn-primary btn-lg" href="#" role="button">Type 3</a>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4"style="padding:0px;">
         <div class="col-md-4" style="display: inline-block;text-align: center;">
           <a class="btn btn-primary btn-lg" href="#" role="button">Type 4</a>
         </div>
@@ -86,7 +86,7 @@
           <a class="btn btn-primary btn-lg" href="#" role="button">Type 6</a>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4"style="padding:0px;">
         <div class="col-md-4" style="display: inline-block;text-align: center;">
           <a class="btn btn-primary btn-lg" href="#" role="button">Type 7</a>
         </div>
