--- a/resources/homepage.html
+++ b/resources/homepage.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <!-- <link rel="icon" href="../../favicon.ico"> -->
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Addattarsi</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/core.css" rel="stylesheet">
