--- a/resources/postpage.html
+++ b/resources/postpage.html
@@ -39,17 +39,21 @@
 											<p>ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ<p>
 										</div>
 										<!--게시글 내용 끝 -->
+										
+										<div>
+											<!-- 좋아요 및 수정 버튼 -->
+											<div class="btn-group" role="group" style="padding-bottom:10px; flaot:left;">
+												<button class="btn btn-default" type="submit" name="edit">
+													<span class="badge"><span class="glyphicon glyphicon-pencil"></span></span> edit
+												</button>
+												<button class="btn btn-default" type="reset" name="like">
+													<span class="badge"><span class="glyphicon glyphicon-thumbs-up"></span></span> 1241
+												</button>
+											</div>
+											<!-- 좋아요 및 수정 버튼 끝 -->
 
-										<!-- 좋아요 및 수정 버튼 -->
-										<div class="btn-group" role="group" style="padding-bottom:10px;">
-											<button class="btn btn-default" type="submit" name="edit">
-												<span class="badge"><span class="glyphicon glyphicon-pencil"></span></span> edit
-											</button>
-											<button class="btn btn-default" type="reset" name="like">
-												<span class="badge"><span class="glyphicon glyphicon-thumbs-up"></span></span> 1241
-											</button>
+											<button class="btn btn-info" style="float:right;">Type C</button>
 										</div>
-										<!-- 좋아요 및 수정 버튼 끝 -->
 
 										<!-- 댓글 -->
 										<div style="width:100%; min-height: 200px;  max-height:400px; overflow:scroll; border-top:0.5px solid grey; border-bottom:0.5px solid grey; padding-top:5px; margin-top:5px; margin-bottom:5px;">
