modify margin-top value in uplodapage.html and register.html

--- a/resources/register.html
+++ b/resources/register.html
@@ -46,7 +46,7 @@
 		</nav>
 
 		<!-- 회원가입 -->
-		<div class="well well-lg" style="margin:20px;">
+		<div class="well well-lg" style="margin:20px; margin-top:50px;">
 			<div class="form">
 				<div class="container">
 					<div id="signup">
