--- a/resources/uploadpage.html
+++ b/resources/uploadpage.html
@@ -61,33 +61,33 @@
 				}
 			}
 			previewFile();  //calls the function named previewFile()
-			</script>
-			<div style="margin:auto; width:795px; height:400px; padding:20px;">
-				<div style="float:left; padding-right:10px;">
-					<!-- If possible, change button in the preview image box -->
-					<input type="image" src="" class="img_file" width="300" height="400" alt="No Image!!">	
-					<input type="file" style="width 300px;" onchange="previewFile()" ><br>
-				</div>
+		</script>
 
-				<div style="float:left; padding-left:10px;" >
-					<textarea class="form-control"name="textfield" style="width:435px; height:200px;" placeholder="Contents"></textarea>
-					<div>
-						<h3>Categories</h3>
-						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-						<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
-					</div>
+		<div style="margin:auto; margin-top:50px; width:795px; height:400px; padding:20px;">
+			<div style="float:left; padding-right:10px;">
+				<!-- If possible, change button in the preview image box -->
+				<input type="image" src="" class="img_file" width="300" height="400" alt="No Image!!">	
+				<input type="file" style="width 300px;" onchange="previewFile()" ><br>
+			</div>
+
+			<div style="float:left; padding-left:10px;" >
+				<textarea class="form-control"name="textfield" style="width:435px; height:200px;" placeholder="Contents"></textarea>
+				<div>
+					<h3>Categories</h3>
+					<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+					<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+					<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+					<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+					<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+					<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+					<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
+					<input type="image" class="tilt pic" src="./images/iu.jpg"  width="50" height=60">
 				</div>
 			</div>
-			<br style="clear:both;">
-			<div style="margin:auto; clear:both; width:74px; height:34px;">
-				<input class="btn btn-default" type="submit" value="작성완료">
-			</div>
+		</div>
+		<br style="clear:both;">
+		<div style="margin:auto; clear:both; width:74px; height:34px;">
+			<input class="btn btn-info" type="submit" value="Post">
 		</div>
 	</body>
 </html>
